<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="@drawable/error"
        android:contentDescription="@string/placeholder" />

    <TextView
        android:id="@+id/error_title"
        style="@style/TitleItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/process_failure"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/error_msg"
        style="@style/TitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process_failure_description"
        android:textAlignment="center" />
</LinearLayout>